--- a/views/base/base_list_view.html
+++ b/views/base/base_list_view.html
@@ -41,7 +41,9 @@
                                     <i class="glyphicon glyphicon-plus icon-plus">过滤条件</i>
                                     <i class="glyphicon glyphicon-minus icon-minus">过滤条件</i>
                                 </a>
+                                <button id="listViewSearchBtn" class="btn btn-xs btn-primary">查询</button>
                                 <button id="clearListSearchCond-{{.ViewType}}" class="btn btn-xs btn-primary hide">清空非默认条件</button>
+
                             </p>
                         </div>
                         <div id="listViewSearch" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
