--- a/views/user/user_list_search.html
+++ b/views/user/user_list_search.html
@@ -49,6 +49,21 @@
                 <input class="form-control" name="Wechat" id="wechat" type="text" />
             </div>
         </div>
-
+    </div>
+    <div class="col-md-3">
+        <div class="form-group">
+            <label for="isadmin" class="col-md-4 control-label ">超级用户</label>
+            <div class="col-md-8 ">
+                <input name="IsAdmin" id="isadmin" class="form-control form-checkbox" type="checkbox">
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="form-group">
+            <label for="active" class="col-md-4 control-label ">有效</label>
+            <div class="col-md-8 ">
+                <input name="Active" id="active" class="form-control form-checkbox" data-oldValue="true" type="checkbox">
+            </div>
+        </div>
     </div>
 </div>
