--- a/views/product/product_uom_categ_form.html
+++ b/views/product/product_uom_categ_form.html
@@ -12,7 +12,9 @@
         <a href="{{.URL}}" class="btn btn-info fa fa-list pull-left">&nbsp列表</a>
     </div>
     {{ .xsrf }} {{if .RecordID}}
-    <input type="hidden"  class="{{.FormField}}" name="recordID" id="record-id" value="{{.RecordID}}"> {{end}}
+    <input type="hidden" name="_method" value="PUT">
+
+    <input type="hidden" class="{{.FormField}}" name="recordID" id="record-id" value="{{.RecordID}}"> {{end}}
     <fieldset>
         <legend>基本信息</legend>
         <div class="row">
