--- a/views/base/footer_js.html
+++ b/views/base/footer_js.html
@@ -27,7 +27,8 @@
 <script src="/static/plugins/select2/select2.full.min.js"></script>
 <script src="/static/plugins/select2/i18n/zh-CN.js"></script>
 <script src="/static/plugins/bootstrap-table/extensions/sticky-header/bootstrap-table-sticky-header.min.js"></script>
-
+<!--数字输入框加减-->
+<script src="/static/plugins/spinner/js/jquery.spinner.min.js"></script>
 <!--bootstrap step-->
 <script src="/static/plugins/bootstrap-step/js/brush.js"></script>
 
