--- a/views/base/head_css.html
+++ b/views/base/head_css.html
@@ -21,6 +21,9 @@
 <link rel="stylesheet" href="/static/plugins/bootstrap-step/css/bs-is-fun.css">
 <!--右键菜单-->
 <link rel="stylesheet" href="/static/plugins/jQuery-contextMenu/jquery.contextMenu.min.css">
+<!--数字输入框加减-->
+<link rel="stylesheet" href="/static/plugins/spinner/css/bootstrap-spinner.min.css">
+
 
 <!--datatables-->
 <!--<link rel="stylesheet" href="/static/plugins/DataTables-1.10.12/media/css/dataTables.bootstrap.min.css">-->
