--- a/views/base/footer_js.html
+++ b/views/base/footer_js.html
@@ -82,7 +82,7 @@
 
 <script src="/static/js/kanban.js"></script>
 
-<script src="/static/js/form-tree-line.js"></script>
+<!--<script src="/static/js/form-tree-line.js"></script>-->
 <script src="/static/js/form.js"></script>
 <script src="/static/js/preview-images.js"></script>
 
