--- a/views/product/product_template_form.html
+++ b/views/product/product_template_form.html
@@ -246,7 +246,7 @@
             <div class="row" id="display-table">
                 <div class="col-md-12">
                     <button type="button" id="add-one-product-template-attribute" class="btn btn-primary fa fa-plus  pull-left form-table-add-line">&nbsp添加一行</button>
-                    <table id="product-template-attribute-table" class="table-diplay-info table table-bordered table-hover table-condensed table-striped">
+                    <table id="product-template-attribute-table" class="table-diplay-info  form-tree-line table table-bordered table-hover table-condensed table-striped">
                     </table>
                 </div>
             </div>
